# FsmTemplateC

./: .gitignore  README.md  fsm_template.sublime-workspace  setup.py
example/: fsm_example.py  lza_example.py  turnstile.py  turnstile_example.py
example/turnstile_complete/: CMakeLists.txt  Makefile  fsm_turnstile.c  fsm_turnstile.h  turnstile.c
example/turnstile_example/: fsm_turnstile.c  fsm_turnstile.h  turnsile  turnstile.c
template/: __init__.py  fsm.py  utils.py
